@@ -3417,6 +3417,22 @@
       </fields>
     </form>
 
+    <form name="settings_order_interface" page="settings" method="POST">
+      <fields>
+        <field name="accept_checks"
+               type="checkbox"
+               default_value="true"
+               description="[ENABLE_CHECK_MO_PAYMENTS]"
+               validate="true"
+               required="false"/>
+        <field name="save"
+               type="submit"
+               description="[SAVE]"
+               validate="false"
+               required="false"/>
+      </fields>
+    </form>
+
     <form name="search_accountdbo_table" page="accounts_browse" method="POST" dbo_table_search="true">
       <fields>
         <field name="id"
