@@ -13,6 +13,8 @@
 // Include the parent class
 require_once $base_path . "solidworks/Page.class.php";
 
+require_once $base_path . "DBO/PaymentDBO.class.php";
+
 /**
  * EditPaymentPage
  *
