@@ -40,6 +40,7 @@
     <phrase id="CARD_CODE_FORMAT">(help)</phrase>
     <phrase id="CART">Cart</phrase>
     <phrase id="CART_TOTAL">Total</phrase>
+    <phrase id="CHECK_OR_MONEY_ORDER">Check or Money Order</phrase>
     <phrase id="CHECKOUT">Checkout</phrase>
     <phrase id="CITY">City</phrase>
     <phrase id="CONTACT_EMAIL">Contact E-Mail</phrase>
